Fix code block background in dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -88,12 +88,6 @@ table {
   color: #828282;
 }
 
-/* Fixes code block styling */
-.highlight,
-code {
-    background-color: #f8fbff !important;
-}
-
 /* Fixes icon / username alignment in footer */
 .username,
 .svg-icon {
